# MemCapture

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ConditionVariable.h  CpuIdleMetric.cpp  CpuIdleMetric.h  Group.h  GroupManager.cpp  GroupManager.h  IMetric.h  JsonReportGenerator.cpp  JsonReportGenerator.h  LICENSE  Log.h  Measurement.cpp  Measurement.h  MemoryMetric.cpp  MemoryMetric.h  Metadata.cpp  Metadata.h  NOTICE  Platform.h  Process.cpp  Process.h  ProcessMeasurement.h  ProcessMetric.cpp  ProcessMetric.h  Procrank.cpp  Procrank.h  README.md  groups.example.json  main.cpp  vcpkg.json
.github/agents/: embedded-programmer.agent.md  l2-test-runner.agent.md  legacy-refactor-specialist.agent.md
.github/instructions/: build-system.instructions.md  c-embedded.instructions.md  cpp-testing.instructions.md  implementation.instructions.md  migrationHLD.instructions.md  shell-scripts.instructions.md
.github/skills/memory-safety-analyzer/: SKILL.md
.github/skills/platform-portability-checker/: SKILL.md
.github/skills/quality-checker/: README.md  SKILL.md
.github/skills/thread-safety-analyzer/: SKILL.md
.github/skills/triage-logs/: SKILL.md
.github/workflows/: build.yml  codeql.yml
FileParsers/: MemInfo.cpp  MemInfo.h  Smaps.cpp  Smaps.h  ZRAM.cpp  ZRAM.h
cmake/: FindBreakpad.cmake
docs/architecture/: overview.md
templates/: template.html
